@@ -4,5 +4,5 @@ package com.alphatica.alis.studio.view.window.trading.strategies.optimize.result
 import com.alphatica.alis.trading.optimizer.OptimizerScore;
 
 public record ResultsTableRow(double NAV, double maxDD, int trades, double accuracy, double expectancy, double profitFactor, double profitPerTrade,
-							  OptimizerScore score) {
+							  double profitableMarkets, OptimizerScore score) {
 }
